--- a/trunk/CR_StyleCop/CR_StyleCop.TestCode/CR_StyleCop.TestCode.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop.TestCode/CR_StyleCop.TestCode.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CR_StyleCop.TestCode</RootNamespace>
     <AssemblyName>CR_StyleCop.TestCode</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
