--- a/trunk/CR_StyleCop/CR_StyleCop.Tests/CR_StyleCop.Tests.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop.Tests/CR_StyleCop.Tests.csproj
@@ -102,6 +102,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeIssueAttribute.cs" />
     <Compile Include="Helpers\LanguageHelper.cs" />
     <Compile Include="Loaders\MsBuildProjectLoader.cs" />
     <Compile Include="Loaders\ProjectLoaderBase.cs" />
@@ -113,8 +114,10 @@
     <Compile Include="Helpers\ParserHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\SolutionParser.cs" />
+    <Compile Include="RuleAttribute.cs" />
     <Compile Include="RulesTests.cs" />
     <Compile Include="RulesTests.SpacingRules.cs" />
+    <Compile Include="ViolationComparer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
