--- a/trunk/CR_Dispos-o-matic/CR_Dispos-o-matic/CR_Dispos-o-matic.csproj
+++ b/trunk/CR_Dispos-o-matic/CR_Dispos-o-matic/CR_Dispos-o-matic.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CR_Dispos_o_matic</RootNamespace>
     <AssemblyName>CR_Dispos-o-matic</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
