--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -90,6 +90,8 @@
     <Compile Include="CodeIssues\FirstParameterIssueLocator.cs" />
     <Compile Include="CodeIssues\FirstTokenByTypeIssueLocator.cs" />
     <Compile Include="CodeIssues\FirstToLastTokenByTypeIssueLocator.cs" />
+    <Compile Include="CodeIssues\LastXmlDocCommentIssueLocator.cs" />
+    <Compile Include="CodeIssues\XmlDocCommentIssueLocator.cs" />
     <Compile Include="CodeIssues\Keywords.cs" />
     <Compile Include="CodeIssues\LastTokenByTypeIssueLocator.cs" />
     <Compile Include="CodeIssues\MethodCallIssueLocator.cs" />
