--- a/CR_StyleCop/CR_StyleCop.Tests/CR_StyleCop.Tests.csproj
+++ b/CR_StyleCop/CR_StyleCop.Tests/CR_StyleCop.Tests.csproj
@@ -44,7 +44,9 @@
     <Reference Include="DevExpress.CodeRush.Core, Version=11.1.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.CodeRush.PlugInCore, Version=11.1.5.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.PlugInCore, Version=11.1.6.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="DevExpress.CodeRush.StructuralParser, Version=11.1.0.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
@@ -103,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeIssueAttribute.cs" />
+    <Compile Include="RulesTests.MaintainabilityRules.cs" />
     <Compile Include="Helpers\LanguageHelper.cs" />
     <Compile Include="Loaders\MsBuildProjectLoader.cs" />
     <Compile Include="Loaders\ProjectLoaderBase.cs" />
